--- a/zookeeper-cluster/docker-compose.yml
+++ b/zookeeper-cluster/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     - "~/log/zoo1/datalog:/datalog"
     environment:
       ZOO_MY_ID: 1
-      ZOO_SERVERS: server.1=0.0.0.0:2888:3888 server.2=zoo2:2888:3888 server.3=zoo3:2888:3888
+      ZOO_SERVERS: server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=zoo3:2888:3888
     networks:
       default:
         ipv4_address: 172.23.0.11
@@ -30,7 +30,7 @@ services:
     - "~/log/zoo2/datalog:/datalog"
     environment:
       ZOO_MY_ID: 2
-      ZOO_SERVERS: server.1=zoo1:2888:3888 server.2=0.0.0.0:2888:3888 server.3=zoo3:2888:3888
+      ZOO_SERVERS: server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=zoo3:2888:3888
     networks:
       default:
         ipv4_address: 172.23.0.12
@@ -47,7 +47,7 @@ services:
     - "~/log/zoo3/datalog:/datalog"
     environment:
       ZOO_MY_ID: 3
-      ZOO_SERVERS: server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=0.0.0.0:2888:3888
+      ZOO_SERVERS: server.1=zoo1:2888:3888 server.2=zoo2:2888:3888 server.3=zoo3:2888:3888
     networks:
       default:
         ipv4_address: 172.23.0.13
